[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "loomui"
version = "0.0.1"
description = "The Thread-Safe, State-Aware Interface that Weaves Itself."
authors = [{name = "Your Name", email = "your.email@example.com"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn",
    "websockets"
]

[project.urls]
"Homepage" = "https://github.com/yourusername/loomui"